--- a/maitri/index.html
+++ b/maitri/index.html
@@ -188,7 +188,7 @@
                 <li class="nav-item navhome">
                   <a
                     class="nav-link"
-                    href="http://localhost/Crime-Reporting-System%20/home.php"
+                    href="http://localhost/Complaint-Management-PHP-main/pages/landing.php"
                     >Complaint tracking System</a
                   >
                 </li>
