--- a/maitri/index.html
+++ b/maitri/index.html
@@ -97,7 +97,7 @@
       .blinking-button {
         position: relative;
         top: 10px; /* You can adjust the top value to change the vertical position */
-        right: -600px;
+        right: -500px;
         display: inline-block;
         padding: 10px 20px;
         font-size: 16px;
@@ -194,6 +194,9 @@
                 </li>
                 <li class="nav-item navhome">
                   <a class="nav-link navhome" href="mentors.html">Events </a>
+                </li>
+                <li class="nav-item navhome">
+                  <a class="nav-link navhome" href="help.html">Help </a>
                 </li>
                 <li class="nav-item navhome">
                   <!-- <a class="nav-link" href="resources.html">Resource Library</a> -->
