--- a/maitri/mentors.html
+++ b/maitri/mentors.html
@@ -25,13 +25,144 @@
     <!-- Custom CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Sakhi | A website for Womens!</title>
+
+    <style>
+        .blink {
+          animation: blinker 1.5s linear infinite;
+          color: rgb(255, 0, 174);
+          font-family: sans-serif;
+        }
+  
+        @keyframes blinker {
+          50% {
+            opacity: 0;
+          }
+        }
+  
+        .dropbtn {
+          /* background-color: #04aa6d; */
+          /* color: white; */
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+          text-decoration: none;
+        }
+  
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+  
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          /* background-color: #f1f1f1; */
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgb(255, 254, 254);
+          z-index: 1;
+        }
+  
+        .dropdown-content a {
+          /* color: rgb(255, 255, 255); */
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+  
+        .dropdown-content a:hover {
+          /* background-color: #ddd; */
+        }
+  
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
+  
+        .dropdown:hover .dropbtn {
+          /* background-color: #3e8e41; */
+          text-decoration: none;
+        }
+  
+        .blinking-button {
+          position: relative;
+          top: 10px; /* You can adjust the top value to change the vertical position */
+          right: -500px;
+          display: inline-block;
+          padding: 10px 20px;
+          font-size: 16px;
+          text-align: center;
+          text-decoration: none;
+          background-color: rgb(255, 0, 174);
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          animation: blink 1.5s infinite;
+        }
+  
+        @keyframes blink {
+          0%,
+          100% {
+            opacity: 1;
+          }
+          50% {
+            opacity: 0;
+          }
+        }
+      </style>
 </head>
 
 <body>
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-color navbar-expand-lg">
-            <div class="container-fluid">
+
+            <div
+              class="collapse navbar-collapse nav justify-content-end"
+              id="navbarSupportedContent"
+            >
+              <ul class="nav justify-content-end">
+                <li class="nav-item navhome active">
+                  <a class="nav-link" aria-current="page" href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item navhome">
+                  <a
+                    class="nav-link"
+                    href="http://localhost/Complaint-Management-PHP-main/pages/landing.php"
+                    >Complaint tracking System</a
+                  >
+                </li>
+                <li class="nav-item navhome">
+                  <a class="nav-link navhome" href="mentors.html">Events </a>
+                </li>
+                <li class="nav-item navhome">
+                  <a class="nav-link navhome" href="help.html">Help </a>
+                </li>
+                <li class="nav-item navhome">
+                  <!-- <a class="nav-link" href="resources.html">Resource Library</a> -->
+                  <div class="dropdown">
+                    <a class="dropbtn">Resources</a>
+                    <!-- <button class="dropbtn">Resource Library</button> -->
+                    <div class="dropdown-content">
+                      <a class="nav-link" href="resources.html"
+                        >Resource Library</a
+                      >
+
+                      <!-- <li class="nav-item navhome">
+                        <a class="nav-link navhome" href="help.html">Help </a>
+                      </li> -->
+
+                      <a class="nav-link" href="faq.html">FAQs</a>
+                      <a class="nav-link" href="fir filling.html">FIR Filing</a>
+                    </div>
+                  </div>
+                  <link rel="stylesheet" href="index.css" />
+                </li>
+              </ul>
+            </div>
+          </div>
+
+            <!-- <div class="container-fluid">
                 <a class="navbar-brand logo" href="index.html">Sakhi</a>
                 <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -54,7 +185,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </nav>
     </header>
     <section>
