--- a/maitri/fir filling.html
+++ b/maitri/fir filling.html
@@ -4,14 +4,194 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Empower young gils to enter the coding world"
+    />
+    <meta
+      name="keywords"
+      content="Coding, Girls, Sotware development, women coders, women in technology"
+    />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="assets/images/Sakhi.jpg" />
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+      crossorigin="anonymous"
+    />
+    <!-- Fontawesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Hover.css CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+      crossorigin="anonymous"
+    />
+    <!-- Custom CSS style sheet -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filing of a FIR</title>
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/c1fc3d2826.js"
       crossorigin="anonymous"
     ></script>
+
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      
+        background:#57039d;
+        color: #0f0f0f;
+      }
+      .blink {
+        animation: blinker 1.5s linear infinite;
+        color: rgb(255, 0, 174);
+        font-family: sans-serif;
+      }
+
+      @keyframes blinker {
+        50% {
+          opacity: 0;
+        }
+      }
+
+      .dropbtn {
+        /* background-color: #04aa6d; */
+        /* color: white; */
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        text-decoration: none;
+      }
+
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        /* background-color: #f1f1f1; */
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgb(255, 254, 254);
+        z-index: 1;
+      }
+
+      .dropdown-content a {
+        /* color: rgb(255, 255, 255); */
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+
+      .dropdown-content a:hover {
+        /* background-color: #ddd; */
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+
+      .dropdown:hover .dropbtn {
+        /* background-color: #3e8e41; */
+        text-decoration: none;
+      }
+
+      .blinking-button {
+        position: relative;
+        top: 10px; /* You can adjust the top value to change the vertical position */
+        right: -500px;
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        text-align: center;
+        text-decoration: none;
+        background-color: rgb(255, 0, 174);
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        animation: blink 1.5s infinite;
+      }
+
+      @keyframes blink {
+        0%,
+        100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0;
+        }
+      }
+    </style>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-color navbar-expand-lg">
+
+        <div
+          class="collapse navbar-collapse nav justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="nav justify-content-end">
+            <li class="nav-item navhome active">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item navhome">
+              <a
+                class="nav-link"
+                href="http://localhost/Complaint-Management-PHP-main/pages/landing.php"
+                >Complaint tracking System</a
+              >
+            </li>
+            <li class="nav-item navhome">
+              <a class="nav-link navhome" href="mentors.html">Events </a>
+            </li>
+            <li class="nav-item navhome">
+              <a class="nav-link navhome" href="help.html">Help </a>
+            </li>
+            <li class="nav-item navhome">
+              <!-- <a class="nav-link" href="resources.html">Resource Library</a> -->
+              <div class="dropdown">
+                <a class="dropbtn">Resources</a>
+                <!-- <button class="dropbtn">Resource Library</button> -->
+                <div class="dropdown-content">
+                  <a class="nav-link" href="resources.html"
+                    >Resource Library</a
+                  >
+
+                  <!-- <li class="nav-item navhome">
+                    <a class="nav-link navhome" href="help.html">Help </a>
+                  </li> -->
+
+                  <a class="nav-link" href="faq.html">FAQs</a>
+                  <a class="nav-link" href="fir filling.html">FIR Filing</a>
+                </div>
+              </div>
+              <link rel="stylesheet" href="index.css" />
+            </li>
+          </ul>
+        </div>
+      </div>
+     </header>
+  
+    
     <h2>Filing of a FIR ( First Information Report )</h2>
 
     <div class="accordian">
@@ -34,7 +214,7 @@
 
     <div class="accordian">
       <div class="question">
-        <h4>Eho can file an FIR?</h4>
+        <h4>Who can file an FIR?</h4>
         <i class="icon fa-solid fa-caret-down"></i>
       </div>
       <div class="answer">
